--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Mrs. Abram's Website</title>
+        <title>Mrs. Abram's Amazing Website</title>
         <style type="text/css">
             body {
                 background: rgb(125, 198, 205);
@@ -82,7 +82,7 @@
     <body>
      <div id="all-contents">
         <nav>
-            <header>Mrs. Abram's First Website</header>
+            <header>Mrs. Abram's Amazing Website</header>
             <ul>
                 <li><a href="index.html">Home</a>
                 </li>
@@ -90,6 +90,7 @@
                 </li>
             </ul>
         </nav>
+    </div>    
         <main>
             <div class="content">
                 <h1>Portfolio</h1>
@@ -97,7 +98,7 @@
                 </ul>
             </div>
         </main>
-    </div>     
+    
       </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script id="portfolioScript">$(document).ready(function() {$.getJSON('projects/projects.json').then(function(data) { data.projects.forEach(function(project){ $('#portfolio').append('<li><a href="projects/' + project.name + '/">' + project.title + ' : ' + project.description + '</a></li>'); }); }); });</script>
