--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <img src="https://12ax7web.s3.amazonaws.com/accounts/1/products/imported/biology-is-life-teeturtle-1000x1000.jpg">
           </div>
           
-         <div class= "content"> 
+         <div class= "portfolio.html"> 
        
         <header>Mrs. Abram</header> 
         <p>Biology Teacher at Hammond High School</p>
