--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <nav>
                 <header>Mrs. Abram's Amazing Website</header>
                 <ul>
-                    <li><ahref="index.html">Home</a></li>
-                    <li><ahref="portfolio.html">Portfolio</a></li>
+                    <li><a href="index.html">Home</a href></li>
+                    <li><a href="portfolio.html">Portfolio</a href></li>
                 </ul>
             </nav> 
         
