update bouncing box

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -62,6 +62,8 @@
 var positionX = 0;
 var points = 0;
 var speed = 10;
+changeBoxText(0);
+
 
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -86,13 +88,7 @@ var speed = 10;
 				}
 				
 			
-			
-			
-/*			IF speed is a positive number:
-    			add 3 to speedX
-			ELSE IF speed is a negative number:
-    		subtract 3 from speedX
-*/		
+		
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
 			it should increase the points total, increase the speed, and move the box to
@@ -111,7 +107,7 @@ var speed = 10;
 					speed -= 3;
 				}
 				
-//				speed += 3;
+
 
 		
 		}
